# wh40k-list-parser

./: .gitignore  README.md  listmaker.db  main.py  pyproject.toml
.claude/commands/: fix-github-issue.md  generate-prp-from-gh-issue.md  list-github-issues.md
PRPs/: wh40k-list-builder.md
Wahapedia Data/: Abilities.csv  Datasheets.csv  Datasheets_abilities.csv  Datasheets_detachment_abilities.csv  Datasheets_enhancements.csv  Datasheets_keywords.csv  Datasheets_leader.csv  Datasheets_models.csv  Datasheets_options.csv  Datasheets_stratagems.csv  Datasheets_wargear.csv  Detachment_abilities.csv  Enhancements.csv  Last_update.csv  Source.csv  Stratagems.csv
src/listmaker/: config.py  main.py
src/listmaker/database/: connection.py  models.py  seed.py
src/listmaker/features/api/: dependencies.py
src/listmaker/features/api/routers/: army_parser.py  datasheets.py  factions.py  lists.py  web.py
src/listmaker/features/data_import/: csv_parser.py  data_mapper.py
src/listmaker/features/data_import/tests/: test_csv_parser.py
src/listmaker/features/list_builder/: army_parser.py  builder.py  calculator.py  validator.py
src/listmaker/features/list_builder/tests/: test_validator.py
src/listmaker/models/: __init__.py  army_list.py  datasheet.py  faction.py  validation.py
src/listmaker/models/tests/: test_army_list.py  test_faction.py
src/listmaker/templates/: base.html  index.html  parse.html
src/listmaker/tests/: conftest.py
